fixed exporting of main and types

--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
   "name": "@parallelsoftware/doc-extract",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Intelligent document extration package",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest",
@@ -11,7 +22,8 @@
     "lint": "eslint . --ext .ts,.js",
     "lint:fix": "eslint . --ext .ts,.js --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [],
   "author": "Anton R. Menkveld",
@@ -30,5 +42,8 @@
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "zod": "^4.0.15"
   }
 }
