--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "keywords": [],
   "author": "Anton R. Menkveld",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -44,6 +47,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "tslib": "^2.8.1",
     "zod": "^4.0.15"
   }
 }
