--- a/package.json
+++ b/package.json
@@ -1,41 +1,29 @@
 {
-  "name": "@parallelsoftware/doc-extract",
+  "name": "@parallelsoftware/doc-extract-monorepo",
   "version": "1.0.2",
-  "description": "Intelligent document extration package",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist"
-  ],
+  "description": "Intelligent document extraction package with modular plugin architecture",
+  "private": true,
   "scripts": {
-    "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint . --ext .ts,.js",
-    "lint:fix": "eslint . --ext .ts,.js --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "prepublishOnly": "npm run build"
+    "build": "pnpm -r build",
+    "test": "pnpm -r test",
+    "lint": "pnpm -r lint",
+    "lint:fix": "pnpm -r lint:fix",
+    "format": "pnpm -r format",
+    "format:check": "pnpm -r format:check"
   },
   "keywords": [],
   "author": "Anton R. Menkveld",
   "license": "MIT",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
   },
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
+    "@types/pdf-parse": "^1.1.5",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.32.0",
@@ -46,8 +34,7 @@
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
-  "dependencies": {
-    "tslib": "^2.8.1",
-    "zod": "^4.0.15"
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
