--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,13 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
+      "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./lib/*": {
+      "import": "./dist/lib/*.js",
+      "require": "./dist/lib/*.js",
+      "types": "./dist/lib/*.d.ts"
     }
   },
   "files": [
