--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,6 +22,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "build:dev": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
