--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -22,6 +22,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "build:dev": "tsc --watch",
     "test": "jest",
     "prepublishOnly": "npm run build"
   },
