--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
 
     // Emit
     "outDir": "./dist",
-    "rootDir": "./src",
+    // Remove rootDir to allow files from multiple root directories
+    // "rootDir": "./packages",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -69,7 +70,7 @@
     "incremental": true,
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
-  "include": ["src/**/*"],
+  "include": ["packages/**/*", "examples/**/*"],
   "exclude": [
     "node_modules",
     "dist",
