--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,46 @@
 # Dependencies
 node_modules/
+**/node_modules/
 
 # Build outputs
-/dist/
+dist/
+**/dist/
 
 # Testing
-/coverage/
+coverage/
+**/coverage/
+**/.nyc_output/
 
 # TypeScript cache
 *.tsbuildinfo
+**/*.tsbuildinfo
 
 # Environment variables
 .env
-.env.local
+.env.*
+!.env.example
 
 # Logs
 logs/
 *.log
 npm-debug.log*
-yarn-debug.log*
+pnpm-debug.log*
 yarn-error.log*
-lerna-debug.log*
-
 
 # OS generated files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 
-# Package files
-*.tgz
-*.tar.gz
+# Editor directories and files
+.idea/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
 
 # Cache directories
 .npm/
 .eslintcache
 .cache/
-.parcel-cache/
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
 
-# Temporary files
-/tmp/
-/temp/
-/.tmp/
+# Package specific
+**/*.tgz
+**/*.tar.gz
